--- a/VC2/04-Box-Model/Unsolved/assets/css/style.css
+++ b/VC2/04-Box-Model/Unsolved/assets/css/style.css
@@ -10,6 +10,9 @@ img {
   height: 200px;
   background-color: lightblue;
   /* TODO: Add a margin property */
+  margin: 19px;
   /* TODO: Add a padding property */
+  padding: 19px;
   /* TODO: Add a border property */
+  border: 10px solid darkblue;
 }
